<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProfileFragment"
    android:padding="0dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/profile_section"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/green_600"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/title_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editpfp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"/>

        <RelativeLayout
            android:id="@+id/imagelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="32dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/avatar"
                android:scaleType="centerCrop"
                android:background="@drawable/circle_background"
                android:layout_centerInParent="true"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/edit_profile_image"
                android:layout_width="38dp"
                android:layout_height="36dp"
                android:layout_alignBottom="@id/profile_image"
                android:layout_alignEnd="@id/profile_image"
                android:background="@drawable/circle_background_white"
                android:src="@drawable/baseline_camera_alt_24"
                android:contentDescription="@string/camera" />
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/profile_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="#888"
            android:textSize="14sp"
            android:layout_marginBottom="4dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/username"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="username"
            android:hint="@string/usernameValue"
            android:background="@drawable/edittext_bg"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#888"
            android:textSize="14sp"
            android:layout_marginBottom="4dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:hint="@string/emailValue"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_bg"
            android:enabled="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="#888"
            android:textSize="14sp"
            android:layout_marginBottom="4dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phone"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:hint="@string/phoneValue"
            android:textColor="@android:color/black"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_bg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="#888"
            android:textSize="14sp"
            android:layout_marginBottom="4dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/gender"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:hint="@string/genderValue"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_bg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="#888"
            android:textSize="14sp"
            android:layout_marginBottom="4dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/address"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:hint="@string/addressValue"
            android:textColor="@android:color/black"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_bg" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:text="@string/savebtn"
            android:background="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="24dp"
            android:padding="12dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>